# prism-sweep

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml
examples/: prism.rules.yaml  product_mode.prism.yaml  zip_mode.prism.yaml
prism/: __init__.py  cli.py  executor.py  manager.py  project.py  rules.py  tui.py
