[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-sweep"
version = "0.1.0"
description = "PRISM - Parameter Research & Investigation Sweep Manager"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Francesco Correnti"}
]
keywords = ["machine-learning", "experiment-management", "hyperparameter-sweep", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/FrancescoCorrenti/prism-sweep"
Documentation = "https://github.com/FrancescoCorrenti/prism-sweep#readme"
Repository = "https://github.com/FrancescoCorrenti/prism-sweep"

[project.scripts]
prism = "prism.cli:main"
prism_tui = "prism.tui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]

[tool.setuptools.package-data]
prism = [
    "*.yaml",
    "*.yml",
    "*.md",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
